--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 
 <main >
 <section class="grid grid-cols-4 mx-auto w-11/12 gap-x-6 mt-10 ">
-  <section class="col-span-3 bg-white pb-[40px]">
 
+  <section class="col-span-3 bg-white pb-[40px]" id="first-section">
     <!-- Row-1 -->
     <div class="flex mt-4 justify-evenly">
       <div class="bg-[#F4F7FF] flex gap-5 w-[250px] h-[120px] items-center justify-center rounded-[12px;]">
         <div class="h-[64px] w-[64px] rounded-full bg-white flex items-center justify-center"><img src="assets/checkbox.png" alt=""></div>
         <div><p class="text-[16px] leading-[24px] font-[500] text-[#00303C]">Task Assigned</p>
-          <h5 class="text-[32px] left-[48px] font-[700]">05</h5>
+          <h5 class="text-[32px] left-[48px] font-[700]" id="number-tobe-deducted">05</h5>
         </div>
       </div>
 
@@ -188,12 +188,12 @@
   <div class="flex justify-center">
     <button  class="bg-[#3752FD] text-[16px] font-[500] text-white px-4 py-2 rounded-[8px]">Clear History</button>
   </div>
+
+  
   </section>
 
 </section>
 
-
-<!--Q&A section-->
 </main>
 
 
@@ -201,6 +201,5 @@
 
 
 <script src="JS/script.js"></script>
-<script src="JS/date.js"></script>
 </body>
 </html>
