--- a/questions.html
+++ b/questions.html
@@ -74,12 +74,20 @@
 
   <!-- Question-2 -->
  
+  <section class=" pb-[100px]">
   <section class="bg-white w-10/12 mx-auto mt-[20px] px-4 rounded-[8px]">
     <div class=" border-b-[1px]"><h2 class="py-[20px] text-[24px] font-[500] ">Question-2: What is the difference between innerHTML, innerText, and textContent ?</h2></div>
     <div><p class="py-[20px]">
+      <p class="font-[500]">1.innerHTML:</p>
       
+      <br>  <br> 
+      
+      <p class="font-[500]">2.innerText:</p>
+      In this way, a particular element can be selected by using the id of that element.this one is the most used method in the case of selecting elements.
+      <br>  <br>  
 
-
+      <p class="font-[500]">3.textContent :</p>
+      By a particular class name, all the elements under that class name can be reached. 
     </p></div>
 
   </section>
@@ -87,7 +95,7 @@
 
     <!-- Question-3 -->
     <section class="bg-white w-10/12 mx-auto mt-[20px] px-4 rounded-[8px]">
-      <div class=" border-b-[1px]"><h2 class="py-[20px] text-[24px] font-[500]] ">Question-3: What is event delegation in the DOM?</h2></div>
+      <div class=" border-b-[1px]"><h2 class="py-[20px] text-[24px] font-[500] ">Question-3: What is event delegation in the DOM?</h2></div>
       <div><p class="py-[20px]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sunt veritatis dicta quos! Minima soluta deserunt nihil. Consequuntur sunt tempora ipsum voluptatibus commodi reprehenderit quo deleniti eveniet quaerat quis. Tempore.</p></div>
   
     </section>
