--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="bg-[#F4F7FF] flex gap-5 w-[250px] h-[120px] items-center justify-center rounded-[12px;]">
         <div class="h-[64px] w-[64px] rounded-full bg-white flex items-center justify-center"><img src="assets/checkbox.png" alt=""></div>
         <div><p class="text-[16px] leading-[24px] font-[500] text-[#00303C]">Task Assigned</p>
-          <h5 class="text-[32px] left-[48px] font-[700]" id="number-tobe-deducted">05</h5>
+          <h5 class="text-[32px] left-[48px] font-[700]" id="number-tobe-deducted">06</h5>
         </div>
       </div>
 
@@ -85,7 +85,7 @@
        
     <div class="flex justify-between mt-8">
       <div><p class="text-[14px] font-[400] text-[#00303C]">Deadline</p>  <h4 class="text-[16px] font-[500]">21 March 2025</h4></div>
-      <div><button class="bg-[#3752FD] text-[16px] font-[500] text-white px-3 py-2 rounded-[8px]" id="fix-mobile-btn">Completed</button></div>
+      <div><button class="bg-[#3752FD] text-[16px] font-[500] text-white px-3 py-2 rounded-[8px]" id="button-1">Completed</button></div>
     </div>   
 
       </div>
@@ -132,7 +132,7 @@
   <div class=" w-[328px] bg-[#F4F7FF] p-7 rounded-[16px]">
     <div class="space-y-5">
      <span class="text-[16px] text-[#00303C] font-[400] bg-white p-2">Meta</span>
-     <h3 class="text-[24px] text-[#00303C] font-[500]">Add new emoji 🤲</h3>
+     <h3 class="text-[24px] text-[#00303C] font-[500]" id="heading-1">Add new emoji 🤲</h3>
      <div class="text-[14px] font[400] text-[#000000] bg-white p-5">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</div>
     </div>
     
@@ -179,17 +179,20 @@
 </section>
 
 
-  <section class="bg-white space-y-2 rounded-[16px]">
-    <div class="flex justify-center mt-5 gap-3">
+  <section class="bg-white space-y-2 rounded-[16px]" id="second-section">
+    <div class="flex justify-center mt-5 gap-3 mb-4">
       <div><img src="assets/activity.png" alt=""></div>
       <p class="text-[20px] font-[500] text-[#00303C]">Activity Log</p>
   </div>
 
   <div class="flex justify-center">
-    <button  class="bg-[#3752FD] text-[16px] font-[500] text-white px-4 py-2 rounded-[8px]">Clear History</button>
+    <button class="bg-[#3752FD] text-[16px] font-[500] text-white px-4 py-2 rounded-[8px]" id="history">Clear History</button>
   </div>
 
-  
+<div id="notification-container" class="py-1"></div>
+
+
+
   </section>
 
 </section>
@@ -199,7 +202,8 @@
 
 
 
-
+<script src="JS/other.js"></script>
 <script src="JS/script.js"></script>
+
 </body>
 </html>
