--- a/questions.html
+++ b/questions.html
@@ -13,6 +13,7 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+     
 
       <style>
         .poppins-font {
@@ -31,7 +32,7 @@
       <h1 class="text-[35px] font-[300]">Dev<span class="font-[700]">Board</span></h1>
     </div>
   
-    <div><button  class="bg-[#3752FD] text-[16px] font-[500] text-white px-4 py-2 rounded-[8px]">Back to Desk</button>
+    <div><a href="/index.html"><button  class="bg-[#3752FD] text-[16px] font-[500] text-white px-4 py-2 rounded-[8px]"  id="back-btn">Back to Desk</button></a>
    </div>
   </section>
 </nav>
@@ -118,5 +119,7 @@
 </main>
 
 
+<script src="JS/script.js"></script>
+<script src="JS/utilities.js"></script>
 </body>
 </html>
