--- a/questions.html
+++ b/questions.html
@@ -32,7 +32,7 @@
       <h1 class="text-[35px] font-[300]">Dev<span class="font-[700]">Board</span></h1>
     </div>
   
-    <div><a href="/index.html"><button  class="bg-[#3752FD] text-[16px] font-[500] text-white px-4 py-2 rounded-[8px]"  id="back-btn">Back to Desk</button></a>
+    <div><a href=""><button  class="bg-[#3752FD] text-[16px] font-[500] text-white px-4 py-2 rounded-[8px]"  id="back-desk">Back to Desk</button></a>
    </div>
   </section>
 </nav>
@@ -119,7 +119,8 @@
 </main>
 
 
-<script src="JS/script.js"></script>
-<script src="JS/utilities.js"></script>
+
+
+<script src="JS/location.js"></script>
 </body>
 </html>
