--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <p class="text-[20px] font-[500] text-[#00303C]">Activity Log</p>
   </div>
 
-  <div class="flex justify-center">
+  <div class="flex justify-center mb-5">
     <button class="bg-[#3752FD] text-[16px] font-[500] text-white px-4 py-2 rounded-[8px]" id="history">Clear History</button>
   </div>
 
