--- a/questions.html
+++ b/questions.html
@@ -146,8 +146,8 @@
 
 
       <p class="font-[500]">3.Removing a JavaScript element:</p>
-      We need to use .remove() function to remove an element.For example,
-      let element = document.getElementById('my-id'); <br>
+      We need to use .remove() function to remove an element.For example, <br>
+      let element = document .getElementById('my-id'); <br>
       element.remove(element); 
       </p></div>
   
